# cmake_multi_cpps_build

./: .gitignore  CMakeLists.txt  README.md  test.cpp
include/: sort.h
src/: insert.cpp  select.cpp
